--- a/mysite/polls/templates/polls/purchase.html
+++ b/mysite/polls/templates/polls/purchase.html
@@ -5,11 +5,6 @@
 <title>PURCHASE</title>
 </head>
 <body>
-<div>
-{% for each in purchase %}
-<li>{{ each.text }}</li>
-{% endfor %}
-</div>
 
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
@@ -26,8 +21,30 @@
   <!-- Compiled and minified JavaScript -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.97.0/js/materialize.min.js"></script>
 
+<div id="loading">
+<style>#loading {
+   width: 100%;
+   height: 100%;
+   top: 0px;
+   left: 0px;
+   position: fixed;
+   display: block;
+   opacity: 0.7;
+   background-color: #fff;
+   z-index: 99;
+   text-align: center;
+}
 
-
+#loading-image {
+  position: absolute;
+  top: 100px;
+  left: 240px;
+  z-index: 100;
+}
+  <img id="loading-image" src="images/ajax-loader.gif" alt="Loading..." />
+</style>
+</div>
+ 
 <html lang="en">
 <head>
   <title>Bootstrap Case</title>
@@ -38,10 +55,6 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-{% for each in task %}
-<li>{{ each.text }}</li>
-{% endfor %}
-
 <div class="card-panel hoverable">
 <nav class="navbar navbar-default">
   <div class="container-fluid">
@@ -60,41 +73,179 @@
 </div>
 
 
-<h1><u>DRY FRUITS AND SPICES</u></h1>
+<script language="javascript" type="text/javascript">
+     $(window).load(function() {
+     $('#loading').hide();
+  });
+</script>
+
+
+<h1 style="color:brown">DRY FRUITS AND SPICES</h1>
 <br></br>
 <br></br>
-<div class="row-md-6"><h1><u>List of Dry Fruits</u></h1></div>
-<ul>
-	<li><a href="file:///home/shivam/Desktop/anjir.html">FIGS(ANJIR)</a></li>
-	<li><a href="file:///home/shivam/Desktop/almonds.html">ALIMONDS(BADAM)</a></li>
-	<li><a href="file:///home/shivam/Desktop/cashew.html">CASHEW(KAJU)</a></li>
-	<li><a href="file:///home/shivam/Desktop/charoli.html">CHAROLI</a></li>
-	<li><a href="file:///home/shivam/Desktop/coconutpowder.html">COCONUT POWDER</a></li>
-	<li><a href="file:///home/shivam/Desktop/khajur.html">DATES(KHAJUR)</a></li>
-    <li><a href="file:///home/shivam/Desktop/plum.html">DRIED PLUM</a></li>
-    <li><a href="file:///home/shivam/Desktop/milkpowder.html">DRY FRUIT MILK POWDER</a></li>
-    <li><a href="file:///home/shivam/Desktop/elaichi.html">ELAICHI</a></li>
-    <li><a href="file:///home/shivam/Desktop/fruitnuts.html">FRUIT NUTS</a></li>
-    <li><a href="file:///home/shivam/Desktop/apricots.html">APRICOTS(JARDALU)</a></li>
-    <li><a href="file:///home/shivam/Desktop/raisins.html">RAISINS(KISHMISH)</li>
-    <li><a href="file:///home/shivam/Desktop/pista.html">PISTACHIOS(PISTA)</a></li>
-    <li><a href="file:///home/shivam/Desktop/kesar.html">SAFFRON(KESAR)</li> 
-</ul>
+<div style="color:red"><h1><u><center>List of Dry Fruits</center></u></h1></div>
+<br></br>
+<div class="row">
 
-<div class="row-md-6"><h1><u>List of Spices</u></h1></div>
-<ul>
-    <li>Aniseed(Suwa or Shopa)</li>
-    <li>Asafoetida(Hing)</li>
-    <li>Red Chilli(Laal Mirch)</li>
-    <li>Black cardamom(Kali Elaichi)</li>
-    <li>Black pepper(Kali Mirchi)</li>
-    <li>White pepper(Safed Mirchi)</li>
-    <li>Peppercorns(Kali Mirch)</li>
-    <li>Black Cumin(Shah Jeera)</li>
-    <li>Capers(Kachra)</li>
-    <li>Charoli(Chironji)</li>
-    <li>Indian bay leaf, bay leaf(Tej Patta)</li>
-    <li>Cinnamon(Dalchini)</li>
+<!-- FIGS(ANGIR)-->    
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/anjir.html"><img src="http://www.alfarid.org/gallery/images/img/Dry_Sweet_fig_b.jpg"width="200px"height="200px"></a></center>
+              </div>
+            
 
-</ul>
+<!--CHAROLI-->
+   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/charoli.html"><img src="http://www.onlyfoods.net/wp-content/uploads/2012/03/Charoli-Photos.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--CASHEW-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/cashew.html"><img src="http://static2.thaitable.com/images/ingredient/5cashew.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--Almonds-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/almonds.html"><img src="http://www.healthandbloom.com/img/almonds-face-packs.jpg"width="200px"height="200px"></a></center>
+              </div>
+
+
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/anjir.html">FIGS(ANGIR)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/charoli.html">CHAROLI</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/cashew.html">CASHEW</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/almonds.html">ALMONDS</a></center></b></div>
+              
+              <br></br>
+              <br></br>
+<!-- FIGS(ANGIR)-->   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/coconutpowder.html"><img src="http://tajagroproducts.com/images/NEW%20FILE%20IMAGES/coconut4.jpg"width="200px"height="200px"></a></center>
+              </div>
+            
+
+<!--CHAROLI-->
+   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/khajur.html"><img src="https://www.organicfacts.net/wp-content/uploads/2013/05/Dates2.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--CASHEW-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/plum.html"><img src="http://www.sarzaminco.com/_files/products/Dried%20Plu.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--Almonds-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/milkpowder.html"><img src="http://3.imimg.com/data3/KQ/SI/MY-13249370/images-stories-virtuemart-category-resized-cat-dryfruit-milk-powder_19-13249370-250x250.jpg"width="200px"height="200px"></a></center>
+              </div>
+
+
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/coconutpowder.html">COCONUT POWDER</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/khajur.html">DATES(KHAJUR)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/plum.html">DRIED PLUM</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/milkpowder.html">DRY FRUIT MILK POWDER</a></center></b></div>
+
+              <br></br>
+              <br></br>
+              
+
+<!--ANJIR-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/elaichi.html"><img src="http://listsbuzz.com/wp-content/uploads/2014/08/health-8-health-benefits-elaichi-or-cardamom-1401354691.jpg"width="200px"height="200px"></a></center>
+              </div>
+            
+
+<!--CHAROLI-->
+   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/fruitnuts.html"><img src="https://pickyeaterblog.files.wordpress.com/2010/07/nuts-and-fruit-mix.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--CASHEW-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/apricots.html"><img src="https://nuts.com/images/auto/801x534/assets/a00ca979676b4a21.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--Almonds-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/raisins.html"><img src="http://www.eramex.ir/portals/0/Products/Raisin/GoldenRaisin.jpg"width="200px"height="200px"></a></center>
+              </div>
+
+
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/elaichi.html">ELAICHI</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/fruitnuts.html">FRUIT NUTS</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/apricots.html">APRICOTS(JARDALU)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/raisins.html">RAISINS(KISHMISH)</a></center></b></div>
+              
+              <br></br>
+              <br></br>
+
+
+            
+</div>
+<br></br>
+<br></br>
+
+<div style="color:green"><h1><u><center>List of Spices</center></u></h1></div>
+<br></br>
+<br></br>
+<br></br>
+<div class="row">
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/aniseed.html"><img src="http://tajagroproducts.com/images/Aniseed/Aniseed.jpg"height="200px"></a></center>
+              </div>
+            
+
+<!--CHAROLI-->
+   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/hing.html"><img src="http://epic.mortingraphicdes.netdna-cdn.com/wp-content/uploads/2012/07/asafoetida.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--CASHEW-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/redchilli.html"><img src="http://pimg.tradeindia.com/00776721/b/1/Red-Chilli-Powder.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--Almonds-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/blackcardamom.html"><img src="http://i.ndtvimg.com/mt/cooks/2014-11/black-cardamom.jpg"width="200px"height="200px"></a></center>
+              </div>
+
+
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/aniseed.html">Aniseed(Suwa or Shopa)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/hing.html">Asafoetida(Hing)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/redchilli.html">Red Chilli(Laal Mirch)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/blackcardamom.html">Black cardamom(Kali Elaichi)</a></center></b></div>
+
+              <br></br>
+              <br></br>
+</div>
+
+
+<div class="row">
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/blackpepper.html"><img src="http://1.wlimg.com/product_images/bc-full/dir_16/473829/black-pepper-seeds-284593.jpg"height="200px"></a></center>
+              </div>
+            
+
+<!--CHAROLI-->
+   
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/whitepepper.html"><img src="http://i01.i.aliimg.com/photo/v0/163440943/White_Pepper.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--CASHEW-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/blackcumin.html"><img src="http://tajagroproducts.com/images/Shahi%20Jeera%20(Black%20cumin%20seed)/cumin.jpg"width="200px"height="200px"></a></center>
+              </div>
+           
+
+<!--Almonds-->
+              <div class="col-md-3"><center><a href="file:///home/shivam/Desktop/bayleaf.html"><img src="http://www.kdexports.net/uploads/products_large/5c60c4a4-41d7-4bc8-82a6-73df02ad87d7.jpg"width="200px"height="200px"></a></center>
+              </div>
+
+
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/blackpepper.html">Black pepper(Kali Mirchi)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/whitepepper.html">White pepper(Safed Mirchi)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/blackcumin.html">Black Cumin(Shah Jeera)</a></center></b></div>
+              <div class="col-md-3"><b><center><a href="file:///home/shivam/Desktop/bayleaf.html">Indian bay leaf, bay leaf(Tej Patta)</a></center></b></div>
+
+              <br></br>
+              <br></br>
+</div>
+
+
+
 </body>
+</html>
