--- a/mysite/polls/templates/polls/task.html
+++ b/mysite/polls/templates/polls/task.html
@@ -101,7 +101,7 @@
 <br></br>
 <div class="col-md-3 obj1"><center><b><a href="file:///home/shivam/Desktop/home.html"><span class="glyphicon glyphicon-home"></span></a><a href="file:///home/shivam/Desktop/home.html">HOME</a></b></center></div>
 <div class="col-md-3 obj2"><center><b>ABOUT US</b></center></div>
-<div class="col-md-3 obj3"><center><b><a href="file:///home/shivam/Desktop/purchase.html"><span class="glyphicon glyphicon-shopping-cart"></span></a><a href="file:///home/shivam/Desktop/purchase.html">PURCHASE</a></b></center></div>
+<div class="col-md-3 obj3"><center><b><a href="purchase.html"><span class="glyphicon glyphicon-shopping-cart"></span></a><a href="file:///home/shivam/Desktop/purchase.html">PURCHASE</a></b></center></div>
  <div class="col-md-3 obj4"><center><b><a href="file:///home/shivam/Desktop/contact_us.html"><span class="glyphicon glyphicon-phone-alt"></span></a><a href="file:///home/shivam/Desktop/contact_us.html">CONTACT</a></b></center></div>
 <br></br>
 <br></br>
